added tacoman to test if i can commit to main from school pc lol
removed herobrine

--- a/index.html
+++ b/index.html
@@ -217,6 +217,17 @@
                         <p><b>Nation(s):</b> Altair</p>
                     </div>
                 </div>
+                <div class="member" id="taco">
+                    <img src="images/skins/tareqzayn.png" height="150">
+                    <div class="memberinfo">    
+                        <p class="name"><img src="images/faces/TareqZayn.png" height="30" width="30"> Tacoman</p>
+                        <p><b>Online:</b> Currently</p>
+                        <p><b>Discord:</b> smth</p>
+                        <p><b>Nickname(s):</b> taco</p>
+                        <p><b>Religion:</b> None</p>
+                        <p><b>Nation(s):</b> Italy. Gibraltar</p>
+                    </div>
+                </div>
             </div>
         </div>
 
