--- a/index.html
+++ b/index.html
@@ -231,6 +231,6 @@
             </div>
         </div>
 
-        <script src="/src/sort.js"></script>
+        <style src="index.js"></style>
     </body>
 </html>
