Organize into directories

--- a/html/index.html
+++ b/html/index.html
@@ -3,14 +3,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
         <title>Playerlist</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="sort.css">
-        <link rel="stylesheet" href="members.css">
+        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="../css/sort.css">
+        <link rel="stylesheet" href="../css/members.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
     </head>
+
     <body>
         <div class="container">
             <div class="header">
@@ -19,6 +20,7 @@
                 <div class="content members" id="members-container">
             </div>
         </div>
-        <script src="createPlayerCards.js"></script>
+
+        <script src="../js/createPlayerCards.js"></script>
     </body>
 </html>
