Clean CSS, create players with grid instead of hard coded order

--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -4,7 +4,6 @@
     <head>
         <title>Playerlist</title>
         <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/sort.css">
         <link rel="stylesheet" href="../css/members.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,5 +21,6 @@
         </div>
 
         <script src="../js/createPlayerCards.js"></script>
+        <script src="../js/index.js"></script>
     </body>
 </html>
