--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
-        <title>Playerlist</title>
+        <title>playerlist</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/members.css">
 
@@ -14,7 +14,11 @@
     <body>
         <div class="container">
             <div class="header">
-                <p class="title">Playerlist</p>
+                <button id="sort-name">Name</button>
+                <button id="sort-gamertag">Gamertag</button>
+                <p class="title">playerlist</p>
+                <button id="sort-discord">Discord</button>
+                <button id="sort-nation">Nation</button>
             </div>
                 <div class="content members" id="members-container">
             </div>
