favicon and grandma (grammar)

--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -5,7 +5,7 @@
         <title>playerlist</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/members.css">
-
+        <link rel="icon" type="image/x-icon" href="/images/favicon.svg">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
             <div class="header">
                 <p class="title">playerlist</p>
                 <div id="sort-display">
-                    <label>Sort</label>
+                    <label>Sort by</label>
                     <button id="sort-name">Name</button>
                     <button id="sort-discord">Discord</button>
                     <button id="sort-nation">Nation</button>
