got rid of favicon cus I HATE FAVICONS
grahhhhhhhhhhhhhhhhh

--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -5,7 +5,7 @@
         <title>playerlist</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/members.css">
-        <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
+        <!-- <link rel="icon" type="image/x-icon" href="../images/favicon.svg"> i don't like favicons -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
             <h1 class="title">playerlist</h1>
 
             <div id="sort-display">
-                <label>Sort by</label>
+                <label>Sort by:</label>
                 <button id="sort-name">Name</button>
                 <button id="sort-discord">Discord</button>
                 <button id="sort-nation">Nation</button>
@@ -32,6 +32,5 @@
         </div>
 
         <script src="../js/createPlayerCards.js"></script>
-        <script src="../js/index.js"></script>
     </body>
 </html>
