--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -13,7 +13,7 @@
 
     <body>
         <div class="header">
-            <h1 class="title">playerlist</h1>
+            <h1 class="title"><a class="active" href="../html/playerlist.html">playerlist</a><a href="../html/war-log.html">war-log</a></h1>
 
             <div id="sort-display">
                 <label>Sort by:</label>
