--- a/html/war-log.html
+++ b/html/war-log.html
@@ -23,76 +23,86 @@
                     <!--hello besser and debuggyo, i am goofing around, help if ya want-->
                     <!--i understand that the code below is TRASH just trust the process fr-->
                     <h2 class="war-name">War of Twelve Autumn</h2>
-                    <div class="team1">
-                        <p class="nation">The Irish Republican Empire</p> <!--i want flags of nations to appear to the side of the nation name-->
-                        <p class="town">Ireland</p> <!--and player heads to appear next to town names-->
-                        <p class="town">Landing Town</p>
-                        <p class="town">Weslandia</p>
-                        <p class="town">Ravenport</p>
-                        <p class="nation">Repubblica Italiana</p>
-                        <p class="town">Zadar</p>
-                        <p class="town">Venezia</p>
-                        <p class="town">Napoli e Sicilia</p>
-                        <p class="town">Cool Neighborhood of Croatia</p>
-                        <p class="town">Bavaria</p>
-                        <p class="nation">København Stål og Transport</p>
-                        <p class="town">Danmark</p>
-                        <p class="town">East Germany</p>
-                        <p class="town">Rhineland</p>
-                    </div>
-                    <div class="team2">
-                        <p class="nation">Kingdom of Heaven</p>
-                        <p class="town">Jerusalem</p>
-                        <p class="town">Gyptios</p>
-                        <p class="town">Athens</p>
-                        <p class="town">etc.</p>
-                        <p class="nation">Magna Khazaria</p>
-                        <p class="town">Belogrod</p>
-                        <p class="nation">Federated States of Altair</p>
-                        <p class="town">Libertas</p>
-                        <p class="town">Aequalitas</p>
+                    <div class="teams">
+                        <div class="team1">
+                            <p class="nation">The Irish Republican Empire</p> <!--i want flags of nations to appear to the side of the nation name-->
+                            <p class="town">Ireland</p> <!--and player heads to appear next to town names-->
+                            <p class="town">Landing Town</p>
+                            <p class="town">Weslandia</p>
+                            <p class="town">Ravenport</p>
+                            <p class="nation">Repubblica Italiana</p>
+                            <p class="town">Zadar</p>
+                            <p class="town">Venezia</p>
+                            <p class="town">Napoli e Sicilia</p>
+                            <p class="town">Cool Neighborhood of Croatia</p>
+                            <p class="town">Bavaria</p>
+                            <p class="nation">København Stål og Transport</p>
+                            <p class="town">Danmark</p>
+                            <p class="town">East Germany</p>
+                            <p class="town">Rhineland</p>
+                        </div>
+                        <div class="team2">
+                            <p class="nation">Kingdom of Heaven</p>
+                            <p class="town">Jerusalem</p>
+                            <p class="town">Gyptios</p>
+                            <p class="town">Athens</p>
+                            <p class="town">etc.</p>
+                            <p class="nation">Magna Khazaria</p>
+                            <p class="town">Belogrod</p>
+                            <p class="nation">Federated States of Altair</p>
+                            <p class="town">Libertas</p>
+                            <p class="town">Aequalitas</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="war"> <!-- The Second Ivirian Campaign -->
                     <h2 class="war-name">The Second Ivirian Campaign</h2>
-                    <div class="team1">
-                        <p class="nation">CKLA</p>
-                        <p class="town">Gyptios</p>
-                    </div>
-                    <div class="team2">
-                        <p class="nation">Gibraltar</p>
-                        <p class="town">Gibraltar</p>
+                    <div class="teams">
+                        <div class="team1">
+                            <p class="nation">CKLA</p>
+                            <p class="town">Gyptios</p>
+                        </div>
+                        <div class="team2">
+                            <p class="nation">Gibraltar</p>
+                            <p class="town">Gibraltar</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="war"> <!-- The Ivirian Campaign -->
                     <h2 class="war-name">The Ivirian Campaign</h2>
-                    <div class="team1">
-                        <p class="nation">CKLA</p>
-                    </div>
-                    <div class="team2">
-                        <p class="nation">Gibraltar</p>
+                    <div class="teams">
+                        <div class="team1">
+                            <p class="nation">CKLA</p>
+                        </div>
+                        <div class="team2">
+                            <p class="nation">Gibraltar</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="war"> <!-- The Ionian War -->
                     <h2 class="war-name">The Ionian War</h2>
-                    <div class="team1">
-                        <p class="nation">CKLA</p>
-                    </div>
-                    <div class="team2">
-                        <p class="nation">Carthage</p>
+                    <div class="teams">
+                        <div class="team1">
+                            <p class="nation">CKLA</p>
+                        </div>
+                        <div class="team2">
+                            <p class="nation">Carthage</p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="war"> <!-- Nuclear Test 01 -->
                     <h2 class="war-name">Nuclear Test 01</h2>
-                    <div class="team1">
-                        <p class="nation">Gibraltar</p>
-                    </div>
-                    <div class="team2">
-                        <p class="nation">Prague</p>
+                    <div class="teams">
+                        <div class="team1">
+                            <p class="nation">Gibraltar</p>
+                        </div>
+                        <div class="team2">
+                            <p class="nation">Prague</p>
+                        </div>
                     </div>
                 </div>
             </div>
