--- a/html/playerlist.html
+++ b/html/playerlist.html
@@ -13,8 +13,10 @@
 
     <body>
         <div class="header">
-            <h1 class="title"><a class="active" href="../html/playerlist.html">playerlist</a><a href="../html/war-log.html">war-log</a></h1>
-
+            <h1 class="title">
+                <a class="active" href="../html/playerlist.html">playerlist</a>
+                <a href="../html/war-log.html">war-log</a>
+            </h1>
             <div id="sort-display">
                 <label>Sort by:</label>
                 <button id="sort-name">Name</button>
