--- a/html/war-log.html
+++ b/html/war-log.html
@@ -60,11 +60,17 @@
                     <h2 class="war-name">The Second Ivirian Campaign</h2>
                     <div class="teams">
                         <div class="team1">
-                            <p class="nation">CKLA</p>
-                            <p class="town">Gyptios</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/CKLA.png">
+                                <p class="nation">CKLA</p>
+                            </div>
+                                <p class="town">Gyptios</p>
                         </div>
                         <div class="team2">
-                            <p class="nation">Gibraltar</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Gibraltar.webp">
+                                <p class="nation">Gibraltar</p>
+                            </div>
                             <p class="town">Gibraltar</p>
                         </div>
                     </div>
@@ -74,10 +80,16 @@
                     <h2 class="war-name">The Ivirian Campaign</h2>
                     <div class="teams">
                         <div class="team1">
-                            <p class="nation">CKLA</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/CKLA.png">
+                                <p class="nation">CKLA</p>
+                            </div>
                         </div>
                         <div class="team2">
-                            <p class="nation">Gibraltar</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Gibraltar.webp">
+                                <p class="nation">Gibraltar</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -86,10 +98,17 @@
                     <h2 class="war-name">The Ionian War</h2>
                     <div class="teams">
                         <div class="team1">
-                            <p class="nation">CKLA</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/CKLA.png">
+                                <p class="nation">CKLA</p>
+                                <img class="flag" src="../images/icons/Winner.png">
+                            </div>
                         </div>
                         <div class="team2">
-                            <p class="nation">Carthage</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Carthage.webp">
+                                <p class="nation">Carthage</p>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -98,13 +117,35 @@
                     <h2 class="war-name">Nuclear Test 01</h2>
                     <div class="teams">
                         <div class="team1">
-                            <p class="nation">Gibraltar</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Gibraltar.webp">
+                                <p class="nation">Gibraltar</p>
+                            </div>
                         </div>
                         <div class="team2">
                             <p class="nation">Prague</p>
                         </div>
                     </div>
                 </div>
+
+                <div class="war"> <!-- idk the name rn -->
+                    <h2 class="war-name">that one time ckla was mid</h2>
+                    <div class="teams">
+                        <div class="team1">
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/CKLA.png">
+                                <p class="nation">CKLA</p>
+                            </div>
+                        </div>
+                        <div class="team2">
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Esperanza.webp">
+                                <p class="nation">Esperanza</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </body>
