reworked war-log, fixed emblems

--- a/html/war-log.html
+++ b/html/war-log.html
@@ -23,55 +23,115 @@
                     <!--hello besser and debuggyo, i am goofing around, help if ya want-->
                     <!--i understand that the code below is TRASH just trust the process fr-->
                     <h2 class="war-name">War of Twelve Autumn</h2>
+                    <h4 class="war-type">Alliance vs Alliance</h2>
                     <div class="teams">
                         <div class="team1">
-                            <p class="nation">The Irish Republican Empire</p> <!--i want flags of nations to appear to the side of the nation name-->
-                            <p class="town">Ireland</p> <!--and player heads to appear next to town names-->
-                            <p class="town">Landing Town</p>
-                            <p class="town">Weslandia</p>
-                            <p class="town">Ravenport</p>
-                            <p class="nation">Repubblica Italiana</p>
-                            <p class="town">Zadar</p>
-                            <p class="town">Venezia</p>
-                            <p class="town">Napoli e Sicilia</p>
-                            <p class="town">Cool Neighborhood of Croatia</p>
-                            <p class="town">Bavaria</p>
-                            <p class="nation">København Stål og Transport</p>
-                            <p class="town">Danmark</p>
-                            <p class="town">East Germany</p>
-                            <p class="town">Rhineland</p>
+                            <div class="nation">
+                                <img class="flag" src="../images/flags/Ireland.png">
+                                <p class="nation">The Irish Republican Empire</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/_IcYPoP_" class="soldier">
+                                <img src="https://mc-heads.net/avatar/wesleyplays" class="soldier">
+                                <img src="https://mc-heads.net/avatar/saxboylafranks" class="soldier">
+                            </div>
+                            <div class="nation">
+                                <p class="nation">Repubblica Italiana</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/Phernoxar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Hexdepixel" class="soldier">
+                                <img src="https://mc-heads.net/avatar/MlgEpicCar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taco_74" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Juusto_Plays1" class="soldier">
+                            </div>
+                            <div class="nation">
+                                <p class="nation">København Stål og Transport</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/Colusius" class="soldier">
+                            </div>
                         </div>
                         <div class="team2">
-                            <p class="nation">Kingdom of Heaven</p>
-                            <p class="town">Jerusalem</p>
-                            <p class="town">Gyptios</p>
-                            <p class="town">Athens</p>
-                            <p class="town">etc.</p>
-                            <p class="nation">Magna Khazaria</p>
-                            <p class="town">Belogrod</p>
-                            <p class="nation">Federated States of Altair</p>
-                            <p class="town">Libertas</p>
-                            <p class="town">Aequalitas</p>
+                            <div class="nation">
+                                <p class="nation">Kingdom of Heaven</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/LysFisk" class="soldier">
+                                <img src="https://mc-heads.net/avatar/theradrad19" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Tangmar" class="soldier">
+                            </div>
+                            <div class="nation">
+                                <p class="nation">Federated States of Altair</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/titaniumcow" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taigus" class="soldier">
+                                <img src="https://mc-heads.net/avatar/rocket_man1234" class="soldier">
+                                <img src="https://mc-heads.net/avatar/dti131" class="soldier">
+                            </div>
+                            <div class="nation">
+                                <p class="nation">Magna Khazaria</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/EpicTDQ" class="soldier">
+                                <img src="https://mc-heads.net/avatar/LLHammer3" class="soldier">
+                            </div>
                         </div>
                     </div>
                 </div>
 
                 <div class="war"> <!-- The Second Ivirian Campaign -->
                     <h2 class="war-name">The Second Ivirian Campaign</h2>
+                    <h4 class="war-type">Nation vs Nation</h4>
                     <div class="teams">
                         <div class="team1">
                             <div class="nation">
                                 <img class="flag" src="../images/flags/CKLA.png">
                                 <p class="nation">CKLA</p>
+                                <img class="flag" src="../images/icons/Winner.png">
                             </div>
-                                <p class="town">Gyptios</p>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/Gestalten" class="soldier">
+                                <img src="https://mc-heads.net/avatar/LysFisk" class="soldier">
+                                <img src="https://mc-heads.net/avatar/theradrad19" class="soldier">
+                                <img src="https://mc-heads.net/avatar/BigChungusMC" class="soldier">
+                                <img src="https://mc-heads.net/avatar/CommanderZap" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Annagaming133" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <p class="nation">Glaggleland</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/titaniumcow" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taigus" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <p class="nation">Magna Khazaria</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/EpicTDQ" class="soldier">
+                                <img src="https://mc-heads.net/avatar/LLHammer3" class="soldier">
+                            </div>
                         </div>
                         <div class="team2">
                             <div class="nation">
                                 <img class="flag" src="../images/flags/Gibraltar.webp">
-                                <p class="nation">Gibraltar</p>
+                                <p class="nation">Principality of Gibraltar</p>
                             </div>
-                            <p class="town">Gibraltar</p>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/MlgEpicCar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taco_74" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <p class="nation">CRAIG</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/Hexdepixel" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Phernoxar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/hatrickexe" class="soldier">
+                                <img src="https://mc-heads.net/avatar/saxboylafranks" class="soldier">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -88,7 +148,7 @@
                         <div class="team2">
                             <div class="nation">
                                 <img class="flag" src="../images/flags/Gibraltar.webp">
-                                <p class="nation">Gibraltar</p>
+                                <p class="nation">Principality of Gibraltar</p>
                             </div>
                         </div>
                     </div>
@@ -96,6 +156,7 @@
 
                 <div class="war"> <!-- The Ionian War -->
                     <h2 class="war-name">The Ionian War</h2>
+                    <h4 class="war-type">Nation vs Nation</h4>
                     <div class="teams">
                         <div class="team1">
                             <div class="nation">
@@ -103,11 +164,42 @@
                                 <p class="nation">CKLA</p>
                                 <img class="flag" src="../images/icons/Winner.png">
                             </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/Gestalten" class="soldier">
+                                <img src="https://mc-heads.net/avatar/LysFisk" class="soldier">
+                                <img src="https://mc-heads.net/avatar/theradrad19" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <p class="nation">Glaggleland</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/titaniumcow" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taigus" class="soldier">
+                            </div>
                         </div>
                         <div class="team2">
                             <div class="nation">
                                 <img class="flag" src="../images/flags/Carthage.webp">
                                 <p class="nation">Carthage</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/thilman" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <img class="flag" src="../images/flags/Gibraltar.webp">
+                                <p class="nation">Gibraltar</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/MlgEpicCar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/taco_74" class="soldier">
+                                <img src="https://mc-heads.net/avatar/tangmar" class="soldier">
+                            </div>
+                            <div class="secondary-nation">
+                                <img class="flag" src="../images/flags/Ireland.png">
+                                <p class="nation">Ireland</p>
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/_IcYPoP_" class="soldier">
                             </div>
                         </div>
                     </div>
@@ -115,11 +207,16 @@
 
                 <div class="war"> <!-- Nuclear Test 01 -->
                     <h2 class="war-name">Nuclear Test 01</h2>
+                    <h4 class="war-type">Town vs Town</h4>
                     <div class="teams">
                         <div class="team1">
                             <div class="nation">
                                 <img class="flag" src="../images/flags/Gibraltar.webp">
                                 <p class="nation">Gibraltar</p>
+                                <img class="flag" src="../images/icons/Winner.png">
+                            </div>
+                            <div class="army">
+                                <img src="https://mc-heads.net/avatar/MlgEpicCar" class="soldier">
                             </div>
                         </div>
                         <div class="team2">
@@ -135,6 +232,7 @@
                             <div class="nation">
                                 <img class="flag" src="../images/flags/CKLA.png">
                                 <p class="nation">CKLA</p>
+                                <img class="flag" src="../images/icons/Winner.png">
                             </div>
                         </div>
                         <div class="team2">
