--- a/html/war-log.html
+++ b/html/war-log.html
@@ -217,6 +217,7 @@
                             </div>
                             <div class="army">
                                 <img src="https://mc-heads.net/avatar/MlgEpicCar" class="soldier">
+                                <img src="https://mc-heads.net/avatar/Tangmar" class="soldier">
                             </div>
                         </div>
                         <div class="team2">
