--- a/html/war-log.html
+++ b/html/war-log.html
@@ -2,18 +2,22 @@
 <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <head>
-        <title>playerlist</title>
+        <title>playerlist war-log</title>
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/war-log.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
 
     <body>
-        <div class="header">
-            <h1 class="title"><a href="../html/playerlist.html">playerlist</a><a class="active" href="../html/war-log.html">war-log</a></h1>
-        </div>
+        <nav>
+            <h1 class="title">
+                <a class="header-link" href="../html/playerlist.html">playerlist</a>
+                <a class="active header-link" href="../html/war-log.html">war-log</a>
+            </h1>
+        </nav>
 
         <!-- declaring party goes on left to remove giberal bias-->
 
@@ -247,5 +251,11 @@
 
             </div>
         </div>
+
+        <footer>
+            <div class="github-icon">
+                <a href="https://github.com/MlgEpicCar/playerlist/tree/main" target="_blank"><i class="fab fa-github"></i></a>
+            </div>
+        </footer>
     </body>
 </html>
